--- a/dualANSK/Haneoka/css/ind.css
+++ b/dualANSK/Haneoka/css/ind.css
@@ -6,7 +6,32 @@ body {
 	padding: 0;
 	color: #000;
 }
-
+.sec{
+    text-align: center;
+}
+#NavBar a{
+    color:rgb(202, 220, 0);
+    text-decoration: none;
+    font-size: 18px;
+}
+#tab,header{
+background-color: #024DC2;}
+#tab a{
+    color:rgb(202, 220, 0);
+    text-decoration: none;
+    font-size: 16px;
+}
+nav{
+    background-color: #003893;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    border-top: 2px solid #002766;}
+.popularity{
+    display: flex;
+    align-items: center;
+    padding-right: 20px;
+}
 img.logo {
 	width : 22%;
 	height : 9%;
@@ -32,7 +57,6 @@ a img { /* 此选择器将删除某些浏览器中显示在图像周围的默认
 
 /* ~~ 站点链接的样式必须保持此顺序，包括用于创建悬停效果的选择器组在内。 ~~ */
 a:link {
-	color:#024DC2;
 	text-decoration: underline; /* 除非将链接设置成极为独特的外观样式，否则最好提供下划线，以便可从视觉上快速识别 */
 }
 a:visited {
