--- a/dualANSK/Haneoka/css/ind.css
+++ b/dualANSK/Haneoka/css/ind.css
@@ -1,284 +1,283 @@
 @charset "utf-8";
+
 body {
-	font: 100%/1.4 Verdana, Arial, Helvetica, sans-serif;
-	background: #e2eaf8;
-	margin: 0;
-	padding: 0;
-	color: #000;
+    font: 100%/1.4 Verdana, Arial, Helvetica, sans-serif;
+    background: #e2eaf8;
+    margin: 0;
+    padding: 0;
+    color: #000;
 }
-.sec{
+
+#img-wrap {
+    margin-left: 100px;
+}
+
+.sec {
     border: #808080 solid 2px;
 }
-.sulan{
+
+.sulan {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-#img-wrap{
-    margin-left: 100px;
-}
-.sec h2{
+
+.sec h2 {
     color: #003893;
     font-size: 24px;
     background-color: #d5d5d5;
 }
-#news{
+
+#news {
     border: 2px solid #003893;
     padding: 20px 10px 50px;
     margin-right: 100px;
     background-color: #d5d5d5;
 }
-#tab{
-    padding-right: 30px;
+
+#news a {
+    color: rgb(110, 31, 31);
+    font-size: 16px;
 }
-#news a{
-    color:rgb(110, 31, 31);
-    font-size: 16px;}
-    /* #news{
-        float: right;
-        }
-        */#NavBar a{
-            color:rgb(202, 220, 0);
-            text-decoration: none;
-            font-size: 18px;
-        }
-        #tab{
-            padding: 10px;
-            margin-right: 100px;
-        }
-        header{
-            flex-direction: column;
-            border-top: 20px solid #003893;
-        }
-        #tab,header{
-            background-color: #024DC2;}
-            #tab a{
-                color:rgb(202, 220, 0);
-                text-decoration: none;
-                font-size: 16px;
-            }
-            .LogoLogIn{
-                display: flex;
-                justify-content: space-between;
-                align-items: center;
-            }
-            nav{
-                background-color: #003893;
-                display: flex;
-                flex-wrap: wrap;
-                justify-content: space-around;
-                border-top: 2px solid #002766;}
-                .popularity{
-                    display: flex;
-                    align-items: center;
-                    padding-left: 20px;
-                }
-                .logo{
-                    margin-left: 100px;
-                }
-                img.logo {
-                    width : 22%;
-                    height : 9%;
-                    max-width: 252;
-                    max-height: 57;
-                    background: #e2eaf8;
-                    display:block;
-                }
-                
-                /* ~~ 元素/标签选择器 ~~ */
-                ul, ol, dl { /* 由于浏览器之间的差异，最佳做法是在列表中将填充和边距都设置为零。为了保持一致，您可以在此处指定需要的数值，也可以在列表所包含的列表项（LI、DT 和 DD）中指定需要的数值。请注意，除非编写一个更为具体的选择器，否则您在此处进行的设置将会层叠到 .nav 列表。 */
-                    padding: 0;
-                    margin: 0;
-                }
-                h1, h2, h3, h4, h5, h6, p {
-                    margin-top: 0;	 /* 删除上边距可以解决边距会超出其包含的 div 的问题。剩余的下边距可以使 div 与后面的任何元素保持一定距离。 */
-                    padding-right: 15px;
-                    padding-left: 15px; /* 向 div 内的元素侧边（而不是 div 自身）添加填充可避免使用任何方框模型数学。此外，也可将具有侧边填充的嵌套 div 用作替代方法。 */
-                }
-                a img { /* 此选择器将删除某些浏览器中显示在图像周围的默认蓝色边框（当该图像包含在链接中时） */
-                    border: none;
-                }
-                
-                /* ~~ 站点链接的样式必须保持此顺序，包括用于创建悬停效果的选择器组在内。 ~~ */
-                a:link {
-                    text-decoration: underline; /* 除非将链接设置成极为独特的外观样式，否则最好提供下划线，以便可从视觉上快速识别 */
-                }
-                a:visited {
-                    color: #024DC2;
-                    text-decoration: underline;
-                }
-                a:hover, a:active, a:focus { /* 此组选择器将为键盘导航者提供与鼠标使用者相同的悬停体验。 */
-                    text-decoration: none;
-                }
-                
-                /* ~~ 此容器包含所有其它 div，并依百分比设定其宽度 ~~ */
-                .container {
-                    width: 80%;
-                    max-width: 1260px;/* 可能需要最大宽度，以防止此布局在大型显示器上过宽。这将使行长度更便于阅读。IE6 不遵循此声明。 */
-                    min-width: 780px;/* 可能需要最小宽度，以防止此布局过窄。这将使侧面列中的行长度更便于阅读。IE6 不遵循此声明。 */
-                    background: #FFF;
-                    margin: 0 auto; /* 侧边的自动值与宽度结合使用，可以将布局居中对齐。如果将 .container 宽度设置为 100%，则不需要此设置。 */
-                }
-                
-                /* ~~ 标题未指定宽度。它将扩展到布局的完整宽度。标题包含一个图像占位符，该占位符应替换为您自己的链接徽标 ~~ */
-                .header {
-                    background: #024DC2;;
-                }
-                
-                /* ~~ 这是布局信息。 ~~ 
+
+
+.popularity {
+    display: flex;
+    align-items: center;
+    padding-left: 20px;
+}
+
+
+
+
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+    margin-top: 0;
+    /* 删除上边距可以解决边距会超出其包含的 div 的问题。剩余的下边距可以使 div 与后面的任何元素保持一定距离。 */
+    padding-right: 15px;
+    padding-left: 15px;
+    /* 向 div 内的元素侧边（而不是 div 自身）添加填充可避免使用任何方框模型数学。此外，也可将具有侧边填充的嵌套 div 用作替代方法。 */
+}
+
+a img {
+    /* 此选择器将删除某些浏览器中显示在图像周围的默认蓝色边框（当该图像包含在链接中时） */
+    border: none;
+}
+
+/* ~~ 站点链接的样式必须保持此顺序，包括用于创建悬停效果的选择器组在内。 ~~ */
+/* a:link {
+    text-decoration: underline;
+}
+ */
+a:hover,
+a:active,
+a:focus {
+    /* 此组选择器将为键盘导航者提供与鼠标使用者相同的悬停体验。 */
+    text-decoration: none;
+}
+
+/* ~~ 此容器包含所有其它 div，并依百分比设定其宽度 ~~ */
+.container {
+    width: 80%;
+    max-width: 1260px;
+    /* 可能需要最大宽度，以防止此布局在大型显示器上过宽。这将使行长度更便于阅读。IE6 不遵循此声明。 */
+    min-width: 780px;
+    /* 可能需要最小宽度，以防止此布局过窄。这将使侧面列中的行长度更便于阅读。IE6 不遵循此声明。 */
+    background: #FFF;
+    margin: 0 auto;
+    /* 侧边的自动值与宽度结合使用，可以将布局居中对齐。如果将 .container 宽度设置为 100%，则不需要此设置。 */
+}
+
+/* ~~ 标题未指定宽度。它将扩展到布局的完整宽度。标题包含一个图像占位符，该占位符应替换为您自己的链接徽标 ~~ */
+
+
+/* ~~ 这是布局信息。 ~~ 
                 
                 1) 填充只会放置于 div 的顶部和/或底部。此 div 中的元素侧边会有填充。这样，您可以避免使用任何“方框模型数学”。请注意，如果向 div 自身添加任何侧边填充或边框，这些侧边填充或边框将与您定义的宽度相加，得出 *总计* 宽度。您也可以选择删除 div 中的元素的填充，并在该元素中另外放置一个没有任何宽度但具有设计所需填充的 div。
                 
                 */
-                .content {
-                    padding: 10px 0;
-                }
-                
-                /* ~~ 此分组的选择器为 .content 区域中的列表提供了空间 ~~ */
-                .content ul, .content ol { 
-                    padding: 0 15px 15px 40px; /* 此填充反映上述标题和段落规则中的右填充。填充放置于下方可用于间隔列表中其它元素，置于左侧可用于创建缩进。您可以根据需要进行调整。 */
-                }
-                
-                /* ~~ 脚注 ~~ */
-                .footer {
-                    padding: 10px 0;
-                    background: #FFFFFF;
-                }
-                
-                /* ~~ 其它浮动/清除类 ~~ */
-                .fltrt {  /* 此类可用于在页面中使元素向右浮动。浮动元素必须位于其在页面上的相邻元素之前。 */
-                    float: right;
-                    margin-left: 8px;
-                }
-                .fltlft { /* 此类可用于在页面中使元素向左浮动。浮动元素必须位于其在页面上的相邻元素之前。 */
-                    float: left;
-                    margin-right: 8px;
-                }
-                .clearfloat { /* 如果从 #container 中删除或移出了 #footer，则可以将此类放置在 <br /> 或空 div 中，作为 #container 内最后一个浮动 div 之后的最终元素 */
-                    clear:both;
-                    height:0;
-                    font-size: 1px;
-                    line-height: 0px;
-                }
-                
-                
-                #img-wrap{
-                    
-                    width:1120px;
-                    height:440px;
-                    position: relative;
-                    overflow: hidden;
-                }
-                #img-wrap img{
-                    width:auto;
-                    height:auto;
-                    max-width:1120px;
-                    max-height:440px;
-                    float:left;
-                    position:absolute;
-                    top:0;
-                    left:0;
-                    /*opacity: 0;*/
-                    z-index:1;
-                }
-                #img-wrap img:first-child{
-                    animation:h1 12s linear 0s infinite;
-                    -webkit-animation:h1 8s linear 0s infinite;
-                }
-                #img-wrap img:nth-child(2){
-                    
-                    animation:h2 12s linear 0s infinite;
-                    -webkit-animation:h2 8s linear 0s infinite ;
-                }
-                #img-wrap img:nth-child(3){
-                    animation:h3 12s linear 0s infinite ;
-                    -webkit-animation:h3 8s linear  0s infinite  ;
-                }
-                #img-wrap img:nth-child(4){
-                    animation:h4 12s linear 0s infinite ;
-                    -webkit-animation:h4 8s linear  0s infinite  ;
-                }
-                @keyframes h1 {
-                    0%{
-                        left:-100%;
-                    }
-                    25%{
-                left:0;
-            }
-            50%{
-                left:0;
-            }
-            75%{
-                left:0;
-            }
-            100%{
-                left:0;
-            }
-        }
- 
-        @keyframes h2 {
-            0%{
-                left:-100%;
- 
-            }
-            25%{
-                left:-100%;
- 
-            }
-            50%{
-                left:0;
- 
-            }
-            75%{
-                left:0;
- 
-            }
-            100%{
-                left:0;
- 
-            }
-        }
-        @keyframes h3 {
-            0%{
-                left:-100%;
- 
-            }
-            25%{
-                left:-100%;
- 
-            }
-            50%{
-                left:-100%;
- 
-            }
-            75%{
-                left:0;
- 
-            }
-            100%{
-                left:0;
- 
-            }
-        }
-        @keyframes h4 {
-            0%{
-                left:-300px;
- 
-            }
-            25%{
-                left:-300px;
- 
-            }
-            50%{
-                left:-300px;
- 
-            }
-            75%{
-                left:-300px;
- 
-            }
-            100%{
-                left:0;
- 
-            }
-        }
+.content {
+    padding: 10px 0;
+}
+
+/* ~~ 此分组的选择器为 .content 区域中的列表提供了空间 ~~ */
+.content ul,
+.content ol {
+    padding: 0 15px 15px 40px;
+    /* 此填充反映上述标题和段落规则中的右填充。填充放置于下方可用于间隔列表中其它元素，置于左侧可用于创建缩进。您可以根据需要进行调整。 */
+}
+
+
+
+/* ~~ 其它浮动/清除类 ~~ */
+.fltrt {
+    /* 此类可用于在页面中使元素向右浮动。浮动元素必须位于其在页面上的相邻元素之前。 */
+    float: right;
+    margin-left: 8px;
+}
+
+.fltlft {
+    /* 此类可用于在页面中使元素向左浮动。浮动元素必须位于其在页面上的相邻元素之前。 */
+    float: left;
+    margin-right: 8px;
+}
+
+.clearfloat {
+    /* 如果从 #container 中删除或移出了 #footer，则可以将此类放置在 <br /> 或空 div 中，作为 #container 内最后一个浮动 div 之后的最终元素 */
+    clear: both;
+    height: 0;
+    font-size: 1px;
+    line-height: 0px;
+}
+
+
+#img-wrap {
+
+    width: 1120px;
+    height: 440px;
+    position: relative;
+    overflow: hidden;
+}
+
+#img-wrap img {
+    width: auto;
+    height: auto;
+    max-width: 1120px;
+    max-height: 440px;
+    float: left;
+    position: absolute;
+    top: 0;
+    left: 0;
+    /*opacity: 0;*/
+    z-index: 1;
+}
+
+#img-wrap img:first-child {
+    animation: h1 12s linear 0s infinite;
+    -webkit-animation: h1 8s linear 0s infinite;
+}
+
+#img-wrap img:nth-child(2) {
+
+    animation: h2 12s linear 0s infinite;
+    -webkit-animation: h2 8s linear 0s infinite;
+}
+
+#img-wrap img:nth-child(3) {
+    animation: h3 12s linear 0s infinite;
+    -webkit-animation: h3 8s linear 0s infinite;
+}
+
+#img-wrap img:nth-child(4) {
+    animation: h4 12s linear 0s infinite;
+    -webkit-animation: h4 8s linear 0s infinite;
+}
+
+@keyframes h1 {
+    0% {
+        left: -100%;
+    }
+
+    25% {
+        left: 0;
+    }
+
+    50% {
+        left: 0;
+    }
+
+    75% {
+        left: 0;
+    }
+
+    100% {
+        left: 0;
+    }
+}
+
+@keyframes h2 {
+    0% {
+        left: -100%;
+
+    }
+
+    25% {
+        left: -100%;
+
+    }
+
+    50% {
+        left: 0;
+
+    }
+
+    75% {
+        left: 0;
+
+    }
+
+    100% {
+        left: 0;
+
+    }
+}
+
+@keyframes h3 {
+    0% {
+        left: -100%;
+
+    }
+
+    25% {
+        left: -100%;
+
+    }
+
+    50% {
+        left: -100%;
+
+    }
+
+    75% {
+        left: 0;
+
+    }
+
+    100% {
+        left: 0;
+
+    }
+}
+
+@keyframes h4 {
+    0% {
+        left: -300px;
+
+    }
+
+    25% {
+        left: -300px;
+
+    }
+
+    50% {
+        left: -300px;
+
+    }
+
+    75% {
+        left: -300px;
+
+    }
+
+    100% {
+        left: 0;
+
+    }
+}
